# project_curs

./: README.md  pyproject.toml
src/: data.json  main.py  utils.py
tests/: test_utils.py  tests_utils.py
